core/tests/snapshots/errors__fail_let_destructure_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat!\n(\"tests/errors/\", stringify! (fail_let_destructure_type_check), \".rain\"))"
---
<hidden>:7:9
| let Integer = internal._get_type(0)
| 
| let {x: Integer} = {x = "6"}
          ^^^^^^^ unrecoverable error: type mismatch, expected [Integer] actual String
